# UMN-ComputerGraphics

Assignment/Assignment0/: Readme.md  main.cpp  setup.txt
Assignment/Assignment1a/: 170vhov.ppm  Assignment1a.cpp  Assignment1a.h  CMakeLists.txt  Color.cpp  Input_processor.cpp  Input_processor.h  Point3.cpp  Point3.h  Ray.cpp  Ray.h  Readme.md  Sphere.cpp  Sphere.h  Vector3.h  setup.txt
Assignment/Assignment1b/: CMakeLists.txt  Color.h  Input_processor.cpp  Input_processor.h  LightSource.h  Light_att_setup_800px.txt  Main.cpp  Point3.h  Ray.cpp  Ray.h  Readme.md  Soft_shadow_setup.txt  Sphere.cpp  Sphere.h
